Fix typo in day 206

--- a/_posts/2013-12-26-day-206.md
+++ b/_posts/2013-12-26-day-206.md
@@ -40,7 +40,7 @@ struct in_addr
 
 This data is always stored in **network byte order**, which is big-endian. This is always true, regardless of whether your machine is little-endian or not. Network byte order is also used to transmit any other integer data in the packet headers.
 
-IP addresses are represented to people in **dotted-decimal notation**. In this form, each byte in the IP address is printed as a decimal number, with each byte separated by a period. For example: the dotted-decimal representation of `0x8002c2f2` is `128.2.194.242`. Linux systems define functions in `arpa/inet.h` (see [manpage](http://linux.die.net/man/3/inet_aton)] specifically for converting to and from dotted-decimal and integer representations of IP addresses:
+IP addresses are represented to people in **dotted-decimal notation**. In this form, each byte in the IP address is printed as a decimal number, with each byte separated by a period. For example: the dotted-decimal representation of `0x8002c2f2` is `128.2.194.242`. Linux systems define functions in `arpa/inet.h` (see [manpage](http://linux.die.net/man/3/inet_aton)) specifically for converting to and from dotted-decimal and integer representations of IP addresses:
 
 ```c
 #include <arpa/inet.h>
