--- a/_posts/2013-12-26-day-206.md
+++ b/_posts/2013-12-26-day-206.md
@@ -55,3 +55,12 @@ char *inet_ntoa(struct in_addr in);
 Here `ntoa`, read `n`-to-`a`, means "network to application". The reverse is true for `aton`.
 
 Your ISP is typically allocated a *range* of IP addresses. Each machine, or **host**, on the Internet is given an IP address. If you're connected to an ISP, they will allocate you an IP address. I heard that some ISPs will give you an address that might not be unique on the Internet, but will be unique on their network &mdash; not sure why they would do this, or if it's true.
+
+
+## Code example
+
+Here is some example code that uses the function calls above to do some stuff. Just for funsies.
+
+<script
+  src="https://gist.github.com/hausdorff/8141382.js">
+</script>
