Update code example section in day 206

--- a/_posts/2013-12-26-day-206.md
+++ b/_posts/2013-12-26-day-206.md
@@ -59,7 +59,7 @@ Your ISP is typically allocated a *range* of IP addresses. Each machine, or **ho
 
 ## Code example
 
-Here is some example code that uses the function calls above to do some stuff. Just for funsies.
+Here is some example code that uses the structs and functions above in practice. Wrote it for funsies, should give you an idea of how to use them in practice.
 
 <script
   src="https://gist.github.com/hausdorff/8141382.js">
