Fix misspelling in day 206

--- a/_posts/2013-12-26-day-206.md
+++ b/_posts/2013-12-26-day-206.md
@@ -54,7 +54,7 @@ char *inet_ntoa(struct in_addr in);
 
 Here `ntoa`, read `n`-to-`a`, means "network to application". The reverse is true for `aton`.
 
-So, how do you get an IP address? This part I'm not quite sure abouy. It looks like your ISP is typically allocated a *range* of IP addresses. Each machine, or **host**, on the Internet is given an IP address, and if you're connected to an ISP, that is who assigns you your IP address. I heard that some ISPs will give you an address that might not be unique on the Internet, but will be unique on their network &mdash; not sure why they would do this, or if it's true.
+So, how do you get an IP address? This part I'm not quite sure about. It looks like your ISP is typically allocated a *range* of IP addresses. Each machine, or **host**, on the Internet is given an IP address, and if you're connected to an ISP, that is who assigns you your IP address. I heard that some ISPs will give you an address that might not be unique on the Internet, but will be unique on their network &mdash; not sure why they would do this, or if it's true.
 
 
 ## Code example
