Fix typo in day 206 post

--- a/_posts/2013-12-26-day-206.md
+++ b/_posts/2013-12-26-day-206.md
@@ -7,7 +7,7 @@ comments: true
 
 ## Hacker School: day 206.
 
-*(My batch ended, August 22, 2013, but as they say, [never graduate](https://www.hackerschool.com/).)*
+*(My batch ended on August 22, 2013, but as they say, [never graduate](https://www.hackerschool.com/).)*
 
 Networking is one of the classes I never had time for. Before today, I didn't even have good answers for basic questions about IP addresses:
 
