Fix wording in day 207 post

--- a/_posts/2013-12-27-day-207.md
+++ b/_posts/2013-12-27-day-207.md
@@ -16,7 +16,7 @@ Most of ML is basically aggregating counts of stuff, and Brushfire is no differe
 The idea behind Algebird is this.
 
 * Sometimes you need to count so many things that one machine can't process the counts quickly enough.
-* And the problem of distributing an aggregation problem across a cluster of computers can be made a lot easier if you know about the *algebraic structure* of the aggregation problem.
+* The problem of distributing an aggregation problem across a cluster of computers can be made a lot easier if you know about the *algebraic structure* of the aggregation problem.
 * Which means that if you phrase problems using Algebird's data structures, it is almost trivial to turn the aggregation problem into a MapReduce job or a Storm topology (or something else).
 
 When I say **algebraic structure** here, I'm talking about mathematical properties of the aggregation. For example, consider that in normal addition, it doesn't matter in which order you add some numbers. If I want to aggregate this sum:
