Update examples and wording of abstract algebra in day 207

--- a/_posts/2013-12-27-day-207.md
+++ b/_posts/2013-12-27-day-207.md
@@ -19,7 +19,7 @@ The idea behind Algebird is this.
 * The problem of distributing an aggregation problem across a cluster of computers can be made a lot easier if you know about the *algebraic structure* of the aggregation problem.
 * Which means that if you phrase problems using Algebird's data structures, it is almost trivial to turn them into MapReduce jobs or Storm topologies (or something else).
 
-When I say **algebraic structure** here, I'm talking about mathematical properties of the aggregation. For example, consider that in normal addition, it doesn't matter in which order you add some numbers. If I want to aggregate this sum:
+When I say **algebraic structure** here, I mean something slightly different than what you learned about in grade school. I'm talking about general, abstract mathematical properties of the aggregation problem. For example, consider that in normal addition, it doesn't matter in which order you add some numbers. If I want to aggregate this sum:
 
 `\[ 1 + 2 + 3 + 4 + 5 + 6 \]`
 
@@ -37,7 +37,9 @@ Or in a different order entirely:
 
 This means that if you make a cluster of computers add up these numbers, **it doesn't matter which computer adds up which numbers, as long as they all get added eventually**.
 
-In the terminology of algebra, the natural numbers are a *monoid* under addition.
+Something similar also holds for finding the largest number in a stream &mdash; it doesn't matter which computer processes which numbers, as long as they all report the largest number they've seen, and as long as you process all the numbers, you can continually aggregate until you have one number, which is always your largest number.
+
+In the terminology of algebra, the natural numbers are a *monoid* under addition and the "largest number" operation.
 
 Monoids are just one type of algebraic data structure that Algebird provides interfaces for. There are [many more](https://github.com/twitter/algebird/wiki/Abstract-algebra-definitions). Each of these has different guarantees for how they can be distributed across a cluster, meaning that if you can phrase your aggregation problem in terms of these, it is much easier to distribute your problem across a cluster.
 
