Update explanations in day 207 again

--- a/_posts/2013-12-27-day-207.md
+++ b/_posts/2013-12-27-day-207.md
@@ -35,11 +35,13 @@ Or in a different order entirely:
 
 `\[ 6 + 4 + 1 + 2 + 3 + 5 \]`
 
-This means that if you make a cluster of computers add up these numbers, **it doesn't matter which computer adds up which numbers, as long as they all get added eventually**.
+In the parlance of this "abstract" algebra, addition on the natural numbers is **commutative** &mdash; *i.e.*, that it does not matter in which order the numbers are added &mdash; and **associative** &mdash; *i.e.*, you can put the parentheses anywhere you want, meaning that any pair can be added first.
 
-Something similar also holds for finding the largest number in a stream &mdash; it doesn't matter which computer processes which numbers, as long as they all report the largest number they've seen, and as long as you process all the numbers, you can continually aggregate until you have one number, which is always your largest number.
+Practically speaking, the use of knowing that addition has these algebraic properties means that if you make a cluster of computers add up these numbers, **it doesn't matter which computer adds up which numbers, as long as they all get added eventually**.
 
-In the terminology of algebra, the natural numbers are a *monoid* under addition and the "largest number" operation.
+Another example is finding the largest element in a stream &mdash; it doesn't matter which computer processes which numbers, as long as they all report the largest number they've seen, and as long as you process all the numbers, you can continually aggregate until you have one number, which is always your largest number.
+
+In the terminology of algebra, the natural numbers are a **monoid** under addition and the "largest number" operation.
 
 Monoids are just one type of algebraic data structure that Algebird provides interfaces for. There are [many more](https://github.com/twitter/algebird/wiki/Abstract-algebra-definitions). Each of these has different guarantees for how they can be distributed across a cluster, meaning that if you can phrase your aggregation problem in terms of these, it is much easier to distribute your problem across a cluster.
 
