Fix wording in day 208 post

--- a/_posts/2013-12-28-day-208.md
+++ b/_posts/2013-12-28-day-208.md
@@ -33,7 +33,7 @@ setTimeout("bringBackBlinky()", spe);
 
 *(My batch ended on August 22, 2013, but as they say, [never graduate](https://www.hackerschool.com/).)*
 
-When I was [reverse engineering the Snapchat API](https://github.com/hausdorff/snapchat-fs), I spent a fair amount of time wondering if there was a quick way to prototype requests. After complaining to a few friends, it turns out that there is: the `telnet` utility[1] on unix systems.
+When I was [reverse engineering the Snapchat API](https://github.com/hausdorff/snapchat-fs), I spent a fair amount of time wondering if there was a quick way to prototype HTTP requests. After complaining to a few friends, it turns out that there is: the `telnet` utility[1] on unix systems.
 
 **Goal:** Let's see how we can use `telnet` to issue an HTTP request that is equivalent to typing `www.google.com` into your address bar and pressing enter.
 
