Update wording in day 208 post, again

--- a/_posts/2013-12-28-day-208.md
+++ b/_posts/2013-12-28-day-208.md
@@ -37,7 +37,7 @@ When I was [reverse engineering the Snapchat API](https://github.com/hausdorff/s
 
 **Goal:** Let's see how we can use `telnet` to issue an HTTP request that is equivalent to typing `www.google.com` into your address bar and pressing enter.
 
-> Aside: Before we begin, it's worth noting that different parts of the URL are used by the server and the client. If we were accessing `www.google.com/somepage.html`, then `www.google.com` is used to figure out where the request is going, while `/somepage.html` is telling the Google server which page to serve up.
+> Aside: Before we begin, it's worth noting that different parts of the URL are used by the server and the client. If we were accessing `www.google.com/somepage.html`, then `www.google.com` is used to figure out which server to send the request to, while `/somepage.html` is telling the Google server which page to serve up. How this works specifically is outside the scope of this article, but knowing that it works might help you understand this article.
 
 Let's start by opening a request to the Google servers. The form of request for opening a connection using `telnet` is:
 
