Fix typos in day 208 post

--- a/_posts/2013-12-28-day-208.md
+++ b/_posts/2013-12-28-day-208.md
@@ -43,9 +43,9 @@ Let's start by opening a request to the Google servers. The form of request for 
 
 ```$ telnet <hostname> <port>```
 
-The word **host** is just network-speak a "machine that exists on a network". A **hostname** is something that identifies a machine on a network &mdash; perhaps a URL or an IP address (see my previous exploration of IP addresses [here](http://blog.nullspace.io/day-206.html)). In this case,the network is the global IP Internet, and the hostname could be something like `www.google.com`.
+The word **host** is just network-speak a "machine that exists on a network". A **hostname** is something that identifies a machine on a network &mdash; perhaps a URL or an IP address (see my previous exploration of IP addresses [here](http://blog.nullspace.io/day-206.html)). In this case, the network is the global IP Internet, and the hostname could be something like `www.google.com`.
 
-The last part of the command involves supplying a **port**. A port is just a 16-bit number that is used to help uniquely identify connections to some server &mdash; I won't get into why this helps now, but it turns out that connecting to a server to do HTTP requests usually involves connectingto port 80, which we will use in this article.
+The last part of the command involves supplying a **port**. A port is just a 16-bit number that is used to help uniquely identify connections to some server &mdash; I won't get into why this helps now, but it turns out that connecting to a server to do HTTP requests usually involves connecting to port 80, which is what we will do here.
 
 So let's connect to the Google server using `telnet`.
 
