Update day 212 post

--- a/_posts/2014-01-01-day-212.md
+++ b/_posts/2014-01-01-day-212.md
@@ -22,14 +22,14 @@ I'm still kind of a noob, and a lot of this has been unclear to me:
 
 The main advantage of this mathematically-informed programming model, at least as I judge it, is this.
 
-A *lot* of count aggregation problems &mdash; more than you'd think &mdash; end up being monoids. Especially linear algebra stuff, like finding the person who has the most "second-followers", or followers who are one hop away on the graph. Writing these aggregation problems in terms of map reduce jobs or Storm topologies is intensely unpleasant, and really hides the underlying algebraic structure of the computation, which can be concisely described using something like Algebird.
+A *lot* of count aggregation problems &mdash; more than you'd think &mdash; end up being monoids. Especially linear algebra stuff, like finding the person who has the most "second-followers", *i.e.*, people who are followers of your followers. Writing these aggregation problems in terms of map reduce jobs or Storm topologies is intensely unpleasant, and really hides the underlying algebraic structure of the computation, which can be concisely described using something like Algebird.
 
-From here, the Algebird code can be transformed cleanly into map reduce jobs or Storm topologies, which is a nice thing to get for free.
+Thus, if you write your code using Algebird, it can be transformed cleanly into map reduce jobs or Storm topologies, which is a nice thing to get for free.
 
 There are some nice code examples of in this interesting [talk by Oscar Boykin](https://www.youtube.com/watch?v=JF-ttZyNa84).
 
 This talk is actually doubly interesting because Boykin spends a fair amount of time contrasting the CS applications of category-theory-like concepts (*e.g.*, monads, monoids, rings, *etc*.) to their mathematical counterpoints.
 
-His main point seems to be that these mathematical abstractions are provided in a library like Algebird for convenience rather than because you're using them to make bulletproof theorems about your code. So, while you can leverage the intuition that something is a monad, it's usually a different matter to prove that our instance of monad is a monad *a la* category theory, or that something is *really* bijective (which would be hard to do in the presence of, *e.g.* a third-party library that's throwing exceptions everywhere).
+His main point seems to be that these mathematical abstractions are provided in a library like Algebird because they make for clean code, rather than because they can be used to make bulletproof theorems about your code. So, while you can leverage the intuition that something is a monad, it's usually a different matter to prove that our instance of monad is a monad *a la* category theory, or that something is *really* bijective (which would be hard to do in the presence of, *e.g.* a third-party library that might throw exceptions everywhere).
 
 Although at this point it seems clear that most aggregation problems happen to propagate via monoids, it's still not clear to me what is a monad, or what other than matrices and polynomials (which don't seem useful) have rings. 
