--- a/_posts/2014-01-31-aol.md
+++ b/_posts/2014-01-31-aol.md
@@ -9,7 +9,7 @@ analysis: ■
 
 [Kara Swisher](http://en.wikipedia.org/wiki/Kara_Swisher) wrote her book [AOL.com](http://www.amazon.com/AOL-com-Kara-Swisher/dp/0812931912/ref=sr_1_3?ie=UTF8&qid=1391237040&sr=8-3&keywords=aol.com) in 1998.
 
-In those days, the industry was an epistemological nightmare. The consumer Internet was so new and ill-understood that there was a distinct limitation to what you could know about, say, the Internet of 2003. Neither the critics nor the advocates really had a good platform for justfying their behavior.
+In those days, the industry was an epistemological nightmare. The consumer Internet was so new and ill-understood. There was a distinct limitation to what you could know about, say, the Internet of 2003. Neither the critics nor the advocates really had a good platform for justfying their behavior.
 
 What's poignant is how little has changed, even 15 years on. Consider, for example, the very first paragraphs in the very first chapter, which might as well be about Instagram or Snapchat:
 
@@ -32,4 +32,4 @@ What's poignant is how little has changed, even 15 years on. Consider, for examp
 > Yet there Case stood--perhaps the liveliest corporate corpse one might ever meet--chatting with American Airlines head Robert Crandall, kibitzing with a cadre of Microsoft's top executives, and joking with Vice President Al Gore.
 
 
-15 years on, we're still in basically the same situation. What does success mean if a company worth billions today can be worth literally nothing tomorrow?
+What does success mean if a company worth billions today can be worth literally nothing tomorrow? Even 15 years on, it's hard to say.
