Update final paragraph of AOL post

--- a/_posts/2014-01-31-aol.md
+++ b/_posts/2014-01-31-aol.md
@@ -32,4 +32,4 @@ What's poignant is how little has changed, even 15 years on. Consider, for examp
 > Yet there Case stood--perhaps the liveliest corporate corpse one might ever meet--chatting with American Airlines head Robert Crandall, kibitzing with a cadre of Microsoft's top executives, and joking with Vice President Al Gore.
 
 
-What does success mean if a company worth billions today can be worth literally nothing tomorrow? Even 15 years on, it's hard to say.
+The company names might have shifted, but the thrust of the question is the same: what does success mean if a company worth billions today can be worth literally nothing tomorrow? Even 15 years on, it's hard to say.
