Update intro to AOL post

--- a/_posts/2014-01-31-aol.md
+++ b/_posts/2014-01-31-aol.md
@@ -11,7 +11,7 @@ analysis: ■
 
 In those days, the industry was an epistemological nightmare. The consumer Internet was so new and ill-understood. There was a distinct limitation to what you could know about, say, the Internet of 2003. Neither the critics nor the advocates really had a good platform for justfying their behavior.
 
-What's poignant is how little has changed, even 15 years on. Consider, for example, the very first paragraphs in the very first chapter, which might as well be about Instagram or Snapchat:
+What's poignant is how little has changed. Consider, for example, the very first paragraphs in the very first chapter, which might as well be about Instagram or Snapchat:
 
 > ### Chapter 1: the canary in the coal mine
 >
