--- a/_posts/2014-01-31-aol.md
+++ b/_posts/2014-01-31-aol.md
@@ -3,13 +3,12 @@ layout: post
 title: Swisher's AOL.com, 15 years later
 comments: true
 permalink: aol.html
-analysis: ■
 ---
 
 
 [Kara Swisher](http://en.wikipedia.org/wiki/Kara_Swisher) wrote her book [AOL.com](http://www.amazon.com/AOL-com-Kara-Swisher/dp/0812931912/ref=sr_1_3?ie=UTF8&qid=1391237040&sr=8-3&keywords=aol.com) in 1998.
 
-In those days, the industry was an epistemological nightmare. The consumer Internet was so new and ill-understood. There was a distinct limitation to what you could know about, say, the Internet of 2003. Neither the critics nor the advocates really had a good platform for justfying their behavior.
+In those days, the industry was an epistemological nightmare. The consumer Internet was new and ill-understood. There was a distinct limitation to what could be known about the Internet even a couple years out. Neither the critics nor the advocates really had a good platform for justfying their behavior.
 
 What's poignant is how little has changed. Consider, for example, the very first paragraphs in the very first chapter, which might as well be about Instagram or Snapchat:
 
