Update wording of site

--- a/_posts/2014-01-31-aol.md
+++ b/_posts/2014-01-31-aol.md
@@ -8,7 +8,7 @@ permalink: aol.html
 
 [Kara Swisher](http://en.wikipedia.org/wiki/Kara_Swisher) wrote her book [AOL.com](http://www.amazon.com/AOL-com-Kara-Swisher/dp/0812931912/ref=sr_1_3?ie=UTF8&qid=1391237040&sr=8-3&keywords=aol.com) in 1998.
 
-In those days, the industry faced an epistemological crisis. The consumer Internet was new and ill-understood. A company worth billions at that time might have been worth nothing a year later. There was a limitation to what could be known, and neither the critics nor the advocates really had a good platform for justfying their behavior.
+In those days, the industry faced an epistemological crisis. The consumer Internet was new and ill-understood. A company worth billions at that time might have been worth nothing a year later. There was simply a limitation to what could be known. Neither the critics nor the advocates really had a good platform for justfying their behavior.
 
 What's poignant is how little has changed. Consider, for example, the very first paragraphs in the very first chapter, which might as well be about Instagram or Snapchat:
 
