Update day 265 post to fix title and erroneous passage

--- a/_posts/2014-02-23-day-265.md
+++ b/_posts/2014-02-23-day-265.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Day 265&#58 Semaphores and mutexes. Mutices. Muticii.
+title: "Day 265: Semaphores and mutexes. Mutices. Muticii."
 permalink: day-265.html
 comments: true
 ---
@@ -79,7 +79,7 @@ It turns out that the variable `s` has a name -- it's called a **semaphore**. Sl
 
 A *mutex* is just a semaphore that is used to guarantee that only one thread is accessing a bit of code at a time. It does this by forcing `s` to be either 0 or 1--either the resource is currently being used, or it is not.
 
-When `s` doesn't have to be a 0 or a 1, then it is usually called a *counting semaphore*. In contrast to a mutex, a counting semaphore will stop a thread from accessing a part of the code **if and only if n other threads are concurrently accessing the data.**
+When `s` doesn't have to be a 0 or a 1, then it is usually called a *counting semaphore*. In contrast to a mutex, a counting semaphore will stop a thread from accessing a part of the code **if and only if n other threads are concurrently accessing the code block.**
 
 When is this useful? Suppose there is a buffer of n things to consume, and new threads must wait only when there is nothing in the buffer. In this case:
 
