Fix posts with colons in titles

--- a/_posts/2013-12-26-day-206.md
+++ b/_posts/2013-12-26-day-206.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Day 206&#58 What is an IP address, anyway?
+title: "Day 206: What is an IP address, anyway?"
 permalink: day-206.html
 comments: true
 ---
