--- a/_posts/2013-12-27-day-207.md
+++ b/_posts/2013-12-27-day-207.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Day 207&#58 How to count things.
+title: "Day 207: How to count things."
 permalink: day-207.html
 comments: true
 ---
