--- a/_posts/2013-12-28-day-208.md
+++ b/_posts/2013-12-28-day-208.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Day 208&#58 telnet, turning you into a human server
+title: "Day 208: telnet, turning you into a human server"
 permalink: day-208.html
 comments: true
 ---
