--- a/_posts/2014-01-01-day-212.md
+++ b/_posts/2014-01-01-day-212.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Day 212&#58 More about counting things with fancy math.
+title: "Day 212: More about counting things with fancy math."
 permalink: day-212.html
 comments: true
 ---
