Add Jekyll gist sugar for day 206 post

--- a/_posts/2013-12-26-day-206.md
+++ b/_posts/2013-12-26-day-206.md
@@ -62,6 +62,4 @@ So, how do you get an IP address? This part I'm not quite sure about. It looks l
 
 Here is some example code that uses the structs and functions above in practice. Wrote it for funsies, should give you an idea of how to use them in practice.
 
-<script
-  src="https://gist.github.com/hausdorff/8141382.js">
-</script>
+{% gist 8141382 %}
