Update the day 266 post

--- a/_posts/2014-02-23-day-266.md
+++ b/_posts/2014-02-23-day-266.md
@@ -56,6 +56,8 @@ close(0x3)		 = 0 0
 
 [Full printout here](https://gist.github.com/hausdorff/9226737#file-dtrace-output-for-very-simple-lock-test). Where's the initial call to `execve`? Have I really never run `dtrace` on OS X before? There were some similarities here (for example `fstat` is a Linux function too), but overall I had no idea what was going on.
 
+**UPDATE:** found this [neat article](https://people.gnome.org/~newren/tutorials/developing-with-gnome/html/ch03s02.html) that actually has a remarkably similar trace! Wish I found that hours ago.
+
 A lot of this looked to me like dynamic library loading, so I tried to run `clang` with `-static`, but I couldn't quite get it to work. Something about a missing library.
 
 Anyway, a lot of the differences between my prior experiance and this seem to be because OS X is a BSD rather than a Linux. In any event I began looking everything up to see if I could piece together what was happening in kernel land to run this program.
