Update intro to day 266

--- a/_posts/2014-02-23-day-266.md
+++ b/_posts/2014-02-23-day-266.md
@@ -12,9 +12,9 @@ journal: ■
 *(My batch ended on August 22, 2013, but as they say, [never graduate](https://www.hackerschool.com/).)*
 
 
-After [learning a bunch about concurrency primitives Yesterday](day-265.html), I decided it would be fun to have an operational understanding of their implementation. So I decided to boot up `dtruss` (which is like `dtrace`, but for OS X) and look at the syscall pattern.
+After [learning a bunch about concurrency primitives Yesterday](day-265.html), I decided it would be fun to have an operational understanding of their implementation. So I decided to boot up `dtruss` (which is like `dtrace`, but for OS X) and look at the syscall pattern under different cool concurrent scenarios.
 
-I ended up running `dtruss` on this very simple program that I wrote:
+I started by running `dtruss` on this very simple program that I wrote:
 
 ```c
 #include <stdio.h>
