Fix date in strace blog post

--- a/_posts/2014-02-25-day-266.md
+++ b/_posts/2014-02-25-day-266.md
@@ -91,7 +91,9 @@ stat64("/usr/lib/system/libdispatch.dylib\0", 0x7FFF6AFE0110, 0x7FFF6AFE0F90)		 
 [...]
 ```
 
-I guess it's hard to know why we'd inspect so many of these files. I suspect they're dynamic libraries, and we're only loading `libdtrace` because we need it. Something that's a bit more mysterious is the huge number of calls to `mmap` that follow:
+I guess it's hard to know why we'd inspect so many of these files. I suspect they're dynamic libraries, and we're only loading `libdtrace` into memory with `mmap` because we need it. Notice that none of them return error codes, so we're definitely asking for information about files that exist.
+
+Something that's a bit more mysterious is the huge number of calls to `mmap` that follow:
 
 ```c
 mmap(0x0, 0x2000, 0x3, 0x1002, 0x1000000, 0x4)		 = 0xB3EB000 0
