Update CLR post

--- a/_posts/2014-08-01-clr-bug.md
+++ b/_posts/2014-08-01-clr-bug.md
@@ -38,7 +38,7 @@ I was greeted with the following mysterious error, buried many method calls deep
 
 This exception was *totally undocumented* in the API. Normally this means (1) they were slacking off with documentation, or (2) there is a bug in the library, and this exception was never meant to be thrown.
 
-In either case, I found the error to be completely baffling. I showed my awesome colleague [Bart De Smet](http://www.amazon.com/5-0-Unleashed-Bart-De-Smet/dp/0672336901) and he too was puzzled.
+In either case, I found the error to be completely baffling. I showed it to my awesome colleague [Bart De Smet](http://www.amazon.com/5-0-Unleashed-Bart-De-Smet/dp/0672336901). He too was puzzled.
 
 
 ## The investigation
@@ -55,13 +55,13 @@ Notice in particular that it's a *property*, yet the error above claims it's a *
 
 Hmm. That's suspicious!
 
-We decide to look at where this member is supposed to be invoked. It turns out to be in `System.Linq.Expressions.Interpreter.QuoteInstruction.ExpressionQuoter`, specifically the `VisitParameter` method. I've copied it again, highlighting the offending attempt to access the `Value` property for your benefit.
+We decide to look at where this member is supposed to be invoked. It turns out to be in `System.Linq.Expressions.Interpreter.QuoteInstruction.ExpressionQuoter`, specifically the `VisitParameter` method. I've copied decompiled it with ILSpy, anda again highlighted the offending attempt to access the `Value` property.
 
 <center><img src="images/expressionquoter.png" width=1200/></center>
 
 Look at that! It's clearly trying to access a **field** called `Value`, but we know from the last code snippet that `Value` is unambiguously a **property**. So this code is completely wrong, and it's been wrong since about 2008.
 
-Further proof this has been a bug for a long time is that the `Value` property actually comes from the `IStrongBox` interface &mdash; and since interfaces can't have fields at all, we know that `Value` has always been a property.
+Further proof this has been a bug for a long time is that the `Value` property actually comes from the `IStrongBox` interface (*i.e.*, `ExplicitBox` inherits from `IStrongBox`, which you can see in the first code snippet) &mdash; and since interfaces can't have fields at all, we know that `Value` has always been a property.
 
 QED. Bug found. We can all go home now, right?
 
@@ -91,7 +91,9 @@ This leads us to line # 88,200:
 
 *(Bart grumbles and moans some more about this like a sane person should, but this is no time to be sane. This is a time to fix the problem.)*
 
-After a bit of trial and error, we replace this code with the following code (IL addresses are optional):
+We basically know how to do what we want in IL, but we spend a lot of time compiling sample applications to get the namespaces and assemblies right, so that we can actually write the newly-hacked IL code. We also spend some time fixing errors in the IL code that `ilasm` reports to us.
+
+At some point, though, we settle on the following IL code, and ultimately **swap out the lines above for these lines**. (NB, the IL addresses are optional.)
 
     ldtoken method instance object \
         [System.Runtime]System.Runtime.CompilerServices.IStrongBox::get_Value()
@@ -103,23 +105,23 @@ After a bit of trial and error, we replace this code with the following code (IL
             class System.Linq.Expressions.Expression, \
             class [System.Reflection]System.Reflection.MethodInfo)
 
-Finally, we re-generate the binary from this IL with the following command:
+Finally, we re-generate the DLL from this IL with the following command:
 
 ```
 ilasm /dll System.Linq.Expressions.il
 ```
 
 
-We re-decompile this with ILSpy to make sure that the everything looks like it should (notice the highlighted part points at the property instead):
+We re-decompile this with ILSpy to make sure that the everything looks like it should (notice the highlighted part points at a call to `Property` instead):
 
 <center><img src="images/expressionquoter2.png" width=1200/></center>
 
 
 Great! That's about what we'd expect.
 
-So, finally, we recompile to fetch this new binary from the GAC (i.e., the Global Applications Cache), and run our code.
+So, finally, we recompile to fetch our original project, so that it fetches the new binary from the GAC (i.e., the Global Applications Cache).
 
-It now works.
+Then we run our code. Magically, it now works.
 
 We follow this up by sending the world's best bug report to the .NET native team.
 
