Update CLR post

--- a/_posts/2014-08-01-clr-bug.md
+++ b/_posts/2014-08-01-clr-bug.md
@@ -55,11 +55,11 @@ Notice in particular that it's a *property*, yet the error above claims it's a *
 
 Hmm. That's suspicious!
 
-We decide to look at where this member is supposed to be invoked. It turns out to be in `System.Linq.Expressions.Interpreter.QuoteInstruction.ExpressionQuoter`, specifically the `VisitParameter` method. I've copied decompiled it with ILSpy, anda again highlighted the offending attempt to access the `Value` property.
+We decided to look at where this member is supposed to be invoked. It turned out to be in `System.Linq.Expressions.Interpreter.QuoteInstruction.ExpressionQuoter`, specifically the `VisitParameter` method. I've decompiled it with ILSpy, and highlighted the offending attempt to access the `Value` property.
 
 <center><img src="images/expressionquoter.png" width=1200/></center>
 
-Look at that! It's clearly trying to access a **field** called `Value`, but we know from the last code snippet that `Value` is unambiguously a **property**. So this code is completely wrong, and it's been wrong since about 2008.
+Look at that! It's clearly trying to access a **field** called `Value`, but we know from the last code snippet that `Value` is unambiguously a **property**. So this code is completely wrong, and it's been wrong since probably about 2008.
 
 Further proof this has been a bug for a long time is that the `Value` property actually comes from the `IStrongBox` interface (*i.e.*, `ExplicitBox` inherits from `IStrongBox`, which you can see in the first code snippet) &mdash; and since interfaces can't have fields at all, we know that `Value` has always been a property.
 
@@ -69,17 +69,17 @@ QED. Bug found. We can all go home now, right?
 
 Normal people would have just reported this to the .NET team and been done with it.
 
-So, of course, that's what we did, right? HAHAHAHAHA of course not. After Bart finished grumbling and accepted that we were not leaving until we resolved the issue, we sat down and **we fucking patched the binary by hand.** Fuck the police.
+So, of course, that's what we did, right? HAHAHAHAHA of course not. After Bart finished grumbling and accepted that I was not going to let him leave until we resolved the issue, we sat down and **we fucking patched the binary by hand.** Fuck the police.
 
-We start by grabbing `System.Linq.Expressions.dll` (the DLL where all this code is) and decompiling it to IL using this command:
+We started by grabbing `System.Linq.Expressions.dll` (the DLL where all this code is) and decompiling it to IL using this command:
 
 ```
 ildasm /out=System.Linq.Expressions.il System.Linq.Expressions.dll
 ```
 
-This produces a big-ass IL file. We open it and ctrl-F for the string `"Value"` (with quotes), which should lead us to the code that does this awful `Expression.Field` thing we saw above.
+This produced a big-ass IL file. We opened it and ctrl-F'd for the string `"Value"` (including quotes), which we imagined would lead us to the code that does this awful `Expression.Field` thing we saw above.
 
-This leads us to line # 88,200:
+It takes us to line # 88,200:
 
     IL_003c:  ldstr      "Value"
     IL_0041:  call       class System.Linq.Expressions.MemberExpression \
@@ -89,11 +89,11 @@ This leads us to line # 88,200:
 
 *Bingo.* Now the real fun begins.
 
-*(Bart grumbles and moans some more about this like a sane person should, but this is no time to be sane. This is a time to fix the problem.)*
+*(Bart grumbled and moaned some more about as any sane person should have, but this was no time to be sane. This was a time to fix the problem.)*
 
-We basically know how to do what we want in IL, but we spend a lot of time compiling sample applications to get the namespaces and assemblies right, so that we can actually write the newly-hacked IL code. We also spend some time fixing errors in the IL code that `ilasm` reports to us.
+We basically knew how to do what we wanted in IL, but we ended up spending a lot of time compiling sample applications to get the namespaces and assemblies right, so that we could actually write the newly-hacked IL code. We also spent some time fixing errors in the IL code that `ilasm` reported to us.
 
-At some point, though, we settle on the following IL code, and ultimately **swap out the lines above for these lines**. (NB, the IL addresses are optional.)
+At some point, though, we settled on the following IL code. We ultimately **swapped out the lines above for this code.** (NB, the IL addresses are optional.)
 
     ldtoken method instance object \
         [System.Runtime]System.Runtime.CompilerServices.IStrongBox::get_Value()
@@ -105,24 +105,24 @@ At some point, though, we settle on the following IL code, and ultimately **swap
             class System.Linq.Expressions.Expression, \
             class [System.Reflection]System.Reflection.MethodInfo)
 
-Finally, we re-generate the DLL from this IL with the following command:
+Finally, we re-generated the DLL from this IL with the following command:
 
 ```
 ilasm /dll System.Linq.Expressions.il
 ```
 
 
-We re-decompile this with ILSpy to make sure that the everything looks like it should (notice the highlighted part points at a call to `Property` instead):
+We re-decompile this DLL with ILSpy to make sure that the everything looks like it should (notice the highlighted part points at a call to `Property` instead):
 
 <center><img src="images/expressionquoter2.png" width=1200/></center>
 
 
 Great! That's about what we'd expect.
 
-So, finally, we recompile to fetch our original project, so that it fetches the new binary from the GAC (i.e., the Global Applications Cache).
+So, finally, we recompiled our original project to, so that it fetched the new patched binary from the GAC (i.e., the Global Applications Cache).
 
-Then we run our code. Magically, it now works.
+Then we ran our code, and magically, it worked.
 
-We follow this up by sending the world's best bug report to the .NET native team.
+We followed this up by sending the world's best bug report to the .NET native team.
 
 We retire for the night, winners.
