--- a/_posts/2014-08-01-clr-bug.md
+++ b/_posts/2014-08-01-clr-bug.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "The time I found a CLR bug and fixed it by hand-altering the DLL."
+title: "The time I found a bug in the .NET framework and fixed it by hand-altering the DLL."
 permalink: clr-bug.html
 comments: true
 analysis: ■
