Fix the wrong assertion about what GAC stands for

--- a/_posts/2014-08-01-clr-bug.md
+++ b/_posts/2014-08-01-clr-bug.md
@@ -7,6 +7,8 @@ analysis: ■
 ---
 
 
+(**Update:** what I forgot to mention is that we're running against the .NET native developer toolchain, which uses a slightly different version of *System.Linq.Expressions.dll*. But, the code in question)
+
 ## Prelude
 
 C# supports kind-of-macros via the very neat [Expression Tree API](http://msdn.microsoft.com/en-us/library/bb397951.aspx). The gist is:
@@ -119,7 +121,7 @@ We re-decompile this DLL with ILSpy to make sure that the everything looks like 
 
 Great! That's about what we'd expect.
 
-So, finally, we recompiled our original project to, so that it fetched the new patched binary from the GAC (i.e., the Global Applications Cache).
+So, finally, we recompiled our original project to, so that it fetched the new patched binary from the GAC (*i.e.*, the Global Assembly Cache).
 
 Then we ran our code, and magically, it worked.
 
