Update CLR post to include HN discussion

--- a/_posts/2014-08-01-clr-bug.md
+++ b/_posts/2014-08-01-clr-bug.md
@@ -7,6 +7,11 @@ analysis: ■
 ---
 
 
+**Update:** some colleagues and ex-colleagues from the .NET framework
+team
+[showed up on HN to comment about this issue](https://news.ycombinator.com/item?id=8122448). It's
+worth reading.
+
 ## Prelude
 
 C# supports kind-of-macros via the very neat [Expression Tree API](http://msdn.microsoft.com/en-us/library/bb397951.aspx). The gist is:
