--- a/_posts/2014-08-01-clr-bug.md
+++ b/_posts/2014-08-01-clr-bug.md
@@ -24,7 +24,7 @@ Neat, eh? Take a look at this code sample.
 
 ```c#
 var exp = (Expression<Func<int, int>>)(x => x+2);
-var result = exp.Compile().Invoke();
+var result = exp.Compile().Invoke(1);
 ```
 
 In the first line, we generate an `Expression` object that represents the lambda `(x => x+2)`.
