--- a/_posts/2014-08-01-clr-bug.md
+++ b/_posts/2014-08-01-clr-bug.md
@@ -29,7 +29,7 @@ var result = exp.Compile().Invoke(1);
 
 In the first line, we generate an `Expression` object that represents the lambda `(x => x+2)`.
 
-In the second line, we compile this expression to IL and then call Invoke, which will link to the new IL "library" and run that code.
+In the second line, we compile this expression to IL and then call Invoke, which will link to the new IL "library" and run that code. THe code should produce `3` as a result.
 
 
 ## The problem
