--- a/_posts/2015-01-09-bond-oss.md
+++ b/_posts/2015-01-09-bond-oss.md
@@ -12,7 +12,7 @@ Today the technical lead, [Adam Sapek](https://www.linkedin.com/in/sapek), is op
 
 Since there is going to be no official MSFT announcement, I would just like to point out that the [Bond compiler](https://github.com/Microsoft/bond/tree/master/compiler) is written in pure Haskell. To repeat: MSFT has written a nontrivial part of a major technical initiative in Haskell, _and_ open sourced it.
 
-I'm very proud to have contributed (a small amount of) code to Bond, and in particular I want to acknowledge Adam and the project dev manager [Chad Walters](https://www.linkedin.com/pub/chad-walters/0/528/b28) for having accepted both the technical risk and spearheaded the effort to push it into open source since before either idea was popular internally. It is an example that I'm seeing increasingly often internally, and I hope it keeps up.
+I'm very proud to have contributed (a small amount of) code to Bond, and in particular I want to acknowledge Adam and the project dev manager [Chad Walters](https://www.linkedin.com/pub/chad-walters/0/528/b28) for having accepted both the technical risk and spearheaded the effort to push it into open source since before either idea was popular internally. It is an example of an attitude that I see increasingly often around here, and I hope it keeps up.
 
 
 
