Add link to "Bond" word in Bond post

--- a/_posts/2015-01-09-bond-oss.md
+++ b/_posts/2015-01-09-bond-oss.md
@@ -6,7 +6,7 @@ comments: true
 ---
 
 
-Bond is a performant serialization system developed and deployed across dozens of mission-critical, high-scale infrastructure projects internally here at Microsoft.
+[Bond](https://github.com/Microsoft/bond) is a performant serialization system developed and deployed across dozens of mission-critical, high-scale infrastructure projects internally here at Microsoft.
 
 Today the technical lead, [Adam Sapek](https://www.linkedin.com/in/sapek), is open sourcing the project [on GitHub](https://github.com/Microsoft/bond) under the very permissive MIT license.
 
